src/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

/* Lenis */
html.lenis {
  @apply h-auto;
  body {
    @apply h-auto;
  }

  [data-lenis-prevent],
  [data-lenis-prevent-wheel],
  [data-lenis-prevent-touch],
  [data-lenis-prevent-vertical],
  [data-lenis-prevent-horizontal] {
    @apply overscroll-contain;
  }
}

.lenis:not(.lenis-autoToggle).lenis-stopped {
  @apply overflow-clip;
}

.lenis.lenis-smooth iframe {
  @apply pointer-events-none;
}

.lenis.lenis-autoToggle {
  @apply transition-[overflow] transition-discrete duration-1;
}

@utility scrollbar-gutter {
  scrollbar-gutter: stable;
}

/* Dark Theme */
@custom-variant dark (&:where([data-theme= "dark"], [data-theme= "dark"] *));

/* Height Breakpoints */
@custom-variant h-xs (@media (min-height: 480px));
@custom-variant h-sm (@media (min-height: 640px));
@custom-variant h-md (@media (min-height: 768px));
@custom-variant h-lg (@media (min-height: 900px));
@custom-variant h-xl (@media (min-height: 1024px));

@utility transition-colors-300 {
  transition-property:
    color, background-color, border-color, outline-color, text-decoration-color,
    fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
  transition-timing-function: var(
    --tw-ease,
    var(--default-transition-timing-function)
  );
  @apply duration-300;
}

@utility text-fluid-9xl {
  font-size: clamp(38px, 0.4803rem + 10.7237vw, 128px);
  line-height: clamp(38px, 0.5283rem + 11.7961vw, 128px);
  @apply font-bold tracking-tight;
}

@utility text-fluid-8xl {
  font-size: clamp(28px, 0.9211rem + 8.8816vw, 96px);
  line-height: clamp(28px, 0.9211rem + 8.8816vw, 96px);
  @apply font-bold tracking-tight;
}

@utility text-fluid-5xl {
  font-size: clamp(20px, 0.7763rem + 3.6184vw, 48px);
  line-height: clamp(24px, 1.0336rem + 4.8125vw, 57.6px);
  @apply font-light tracking-[-0.01em];
}

@utility text-fluid-4xl {
  font-size: clamp(16px, 0.5526rem + 2.2368vw, 36px);
  line-height: clamp(19.2px, 0.8842rem + 3.5789vw, 43.2px);
  @apply font-normal tracking-normal;
}

@utility text-fluid-2xl {
  font-size: clamp(16px, 0.8947rem + 1.3158vw, 24px);
  line-height: clamp(19.2px, 1.0737rem + 1.5789vw, 28.8px);
  @apply font-normal tracking-normal;
}

@utility text-fluid-base {
  font-size: clamp(14px, 0.8158rem + 0.9868vw, 16px);
  line-height: clamp(16.8px, 0.9789rem + 1.1842vw, 19.2px);
  @apply font-normal tracking-normal;
}

/* intl text opacity animation */
body {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  span,
  a,
  label,
  li {
    @apply opacity-100 transition-opacity duration-250 ease-out;
  }

  &[data-locale-changing="true"] {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    p,
    span,
    a,
    label,
    li {
      @apply opacity-0;
    }
  }
}
@utility no-locale-animation {
  @apply opacity-100!;
}

/* ThemeToggle animation */
.sun-and-moon {
  .moon circle {
    transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
  }

  .sun {
    transition: transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
  }

  .sun-beams {
    transition:
      transform 0.5s cubic-bezier(0.5, 1.6, 0.4, 0.8),
      opacity 0.5s cubic-bezier(0.3, 0, 0.7, 1);
  }
}
[data-theme="dark"] .sun-and-moon {
  .moon circle {
    @apply delay-250 duration-500;
    transform: translateX(-7px);
  }

  .sun {
    @apply scale-175 duration-250;
    transition-timing-function: cubic-bezier(0.3, 0, 0.7, 1);
  }

  .sun-beams {
    @apply -rotate-z-25 opacity-0 duration-150;
  }
}

@theme {
  /* shadcn :
    should be defined when modal opened : var(--removed-body-scroll-bar-size)
  */

  /* Font Families */
  --font-satoshi: var(--font-satoshi);
  --font-roxboroughcf: var(--font-roxboroughcf);
  --font-roboto-mono: var(--font-roboto-mono), var(--font-mono);

  /* Border Radius */
  --radius-lg: var(--radius);
  --radius-md: calc(var(--radius) - 2px);
  --radius-sm: calc(var(--radius) - 4px);

  /* Custom Colors */
  --color-light-black: #111315;
  --color-light-grey: #5f5f5f;

  --color-primary-text-light: #111;
  --color-primary-text-dark: #f5f5f7;

  --color-light-blue: #66ccff;
  --color-dark-blue: #3399cc;
  --color-deep-blue: #12263a;

  /* Semantic Colors */
  --color-background: var(--background);
  --color-foreground: var(--foreground);

  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);

  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);

  --color-primary: var(--primary);
  --color-primary-text: var(--primary-text);
  --color-primary-foreground: var(--primary-foreground);

  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);

  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);

  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);

  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);

  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);

  /* Chart Colors */
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);

  /* Sidebar Colors */
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
}

:root {
  --radius: 0.625rem;
  --background: #edf4fa;
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-text: #111;
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}

[data-theme="dark"] {
  --background: #0d0d0f;
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-text: #f5f5f7;
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

